Add .gitignore to exclude .csv files

--- a/Homework/Week-2/Sarah_HW1.ipynb
+++ b/Homework/Week-2/Sarah_HW1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "id": "7b23c2a8-8732-4e01-87b6-a4686104df1e",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "[101 rows x 7 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,6 +219,27 @@
     "\n",
     "df = pd.read_csv('movie.csv')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4165eb44-bd71-47f2-ab8d-bff93dd807b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.columns[1]].to_numpy()[1]"
    ]
   },
   {
